# plane-tracker

./: .gitmodules  Cargo.toml  LICENSE  README.md
src/: config.rs  data.rs  data_receiver.rs  data_sender.rs  main.rs
src/gui/: mod.rs
