[package]
name = "plane-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
chrono = "0.4.31"
dirs = "5.0.1"
gtk4 = "0.7.3"
pointing-utils = { path = "ext/pointing-utils" }
uom = "0.35.0"
